# pageseeder-rs

./: .gitignore  Cargo.toml  README.md  psml-processed-v1.4.xsd  test.rs
pageseeder-api/: Cargo.toml  README.md
pageseeder-api/src/: error.rs  lib.rs  model.rs  oauth.rs  services.rs  tests.rs
psml/: Cargo.toml  README.md
psml/src/: lib.rs  model.rs  text.rs
psml/test/: document.psml  fragment.psml  properties_fragment.psml  table.psml
src/: error.rs  lib.rs
src/api/: mod.rs  model.rs  oauth.rs  services.rs  tests.rs
src/psml/: gen.rs  mod.rs  model.rs  ser.rs  tests.rs  text.rs
src/psml/ser/: tests.rs
test/: document.psml  fragment.psml  properties-fragment.psml  property.psml  section.psml
