[package]
name = "pageseeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"], optional = true }
quick-xml = { version = "0.25.0", features = ["serialize"], optional = true }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
chrono = { version ="0.4.22", optional = true }
tokio = { version = "1.21.0", features = ["full"], optional = true }
indexmap = { version = "1.9.1", optional = true }

[features]
default = ["api", "psml"]
api = ["dep:tokio", "dep:reqwest", "dep:serde_json", "dep:chrono"]
psml = ["dep:quick-xml", "dep:indexmap"]