[package]
name = "pageseeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"], optional = true }
quick-xml = { version = "0.25.0", features = ["serialize"], optional = true }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.85", optional = true }
chrono = { version ="0.4.22", optional = true }
tokio = { version = "1.21.0", features = ["full"], optional = true }
indexmap = { version = "1.9.1", optional = true }
yaserde = { version = "0.8.0", features = ["yaserde_derive"] }
xml-schema = { version = "0.2.0", features = ["xml-schema-derive"] }
xml-schema-derive = "0.2.0"
xml-rs = "0.8.16"
log = "0.4.19"
yaserde_derive = "0.8.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["api", "psml"]
api = ["dep:tokio", "dep:reqwest", "dep:serde_json", "dep:chrono"]
psml = ["dep:quick-xml", "dep:indexmap"]
