[package]
name = "pageseeder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version ="0.4.22", features = ["serde"] }
tokio = { version = "1.21.0", features = ["full"] }
quick-xml = { version = "0.31.0", features = ["serialize"]}
psml = { path = "../psml" }
