[package]
name = "psml"
version = "0.1.1"
edition = "2021"
description = "A library for serialising to, and deserialising from, PSML."
authors = ["Linus Kirkwood <linuskirkwood@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/lkirkwood/pageseeder-rs"
keywords = ["serde", "psml", "pageseeder", "parsing", "library"]
categories = ["encoding", "text-processing", "parser-implementations"]

[dependencies]
indexmap = { version = "1.9.1", optional = true }
serde = { version = "1.0.143", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.3"

[dev-dependencies]
quick-xml = { version = "0.31.0", features = ["serialize"]}
